<resources>
    <string name="app_name">ShepherdLogin</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_clearSession">Clear Session</string>
    <string name="action_license">License</string>
    <string name="action_exit">Exit</string>


    <!--  Preferences -->
    <string name="dialog_based_preferences">Server Preferences</string>

    <string name="server_title">Server Address</string>
    <string name="server_summary">Enter Server address here</string>
    <string name="server_dialog_title">Enter Server Address</string>

    <string name="license_title">License</string>
    <string name="summary_license">This App is part of the Security Shepherd Project. The Security Shepherd project is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version. The Security Shepherd project is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details. You should have received a copy of the GNU General Public License along with the Security Shepherd project.  If not, see http://www.gnu.org/licenses.</string>
    <string name="summary_objective">Implement a mechanism where a user can log into a Security Shepherd server  through a Mobile Challenge Application to facilitate user specific keys to be presented. This mechanism would need to be crafted so it cannot be exploited to return keys for security challenges without completing the level.</string>
    <string name="title_test_preference">Test Server Connection</string>
    <string name="summary_test_preference">Tests the specified Server connection</string>

</resources>
